--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -29,7 +29,7 @@
 
 
 
-    <div class="flex flex-col xl:w-2/3 w-11/12 items-center mx-auto">
+    <div class="flex flex-col xl:w-2/3 w-11/12 items-center mx-auto mb-12">
         <div class="w-full">
             <h1 class="lg:text-4xl text-7xl pb-12 text-center">Liste des systèmes d'acquisition</h1>
             <div class="flex flex-row justify-between mb-5">
