--- a/webapp/sfapp/templates/plan/charge_de_mission/liste_salles.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/liste_salles.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des relevés{% endblock %}
+{% block title %}Liste des salles{% endblock %}
 
 {% set orientation  = {
     "No" : "Nord",
